[workspace]
resolver = "2"
members = [
	"player-color-param",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/KojoBailey/nucc-json-lib-rs"
